--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ font-size:200%;
 {
 width:100%;
 height:60px;
-background:#999;
+background:#412c84;
+
 
 }
 
@@ -65,8 +66,11 @@ color:#fff;
 .social
 {
 min-height:200px;
-
+color:#fff;
 background:#200772;
+font-size:120%;
+text-align:center;
+padding-top:15px;
 }
 
 
